# django-microservice-base

./: .env.example  .gitignore  Dockerfile  README.md  commands.md  config.py  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
app/: apps.py  helpers.py  models.py  serializers.py  views.py
app/auth/: basic_validator.py  helpers.py  jwt_validator.py
app/migrations/: 0001_initial.py
msvc/: asgi.py  settings.py  urls.py  wsgi.py
scripts/: first-launch.sh  import.sh  install.sh  prepare.sh  prod-launch.sh  provide-django-secret-key.sh  pull.sh  update.sh
volumes/: .gitignore
